--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a {
 }
 
 .img {
-	width: 500px;
+	width: auto;
 	height: 500px;
 	box-shadow: 4px 4px 10px rgb(68, 68, 68);
 	border-radius: 15px;
@@ -93,27 +93,6 @@ a {
 		padding: 10px;
 	}
 	.img {
-		width: 400px;
 		height: 400px;
-		box-shadow: 4px 4px 10px grey;
-		border-radius: 15px;
-	}
-}
-
-/* CSS 19120490 */
-.info_490 {
-	list-style-type: none;
-}
-.info_490 .label_490 {
-	font-weight: 600;
-}
-.img_490 {
-	border-radius: 50%;
-	width: 250px;
-}
-@media screen and (max-width: 1000px) {
-	.container {
-		width: 100%;
-		flex-direction: column;
 	}
 }
